{
    "name": "CameraControl",
    "maps": [
        {
            "name": "CameraMovement",
            "id": "14b7ea89-e483-44af-b11a-2b63284a9edb",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "4fff9458-9ba0-4c08-8c50-598f5102c1cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "87243a52-a045-4acd-a33d-fcde6a5f6ef6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "641af164-173d-49a2-9a95-20a657574b4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "a6a37461-0dee-460f-bc8c-58add731ea93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomIn",
                    "type": "Button",
                    "id": "20fcabed-6469-494c-ba16-19ac31f127d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomOut",
                    "type": "Button",
                    "id": "83d2ff76-be78-486e-b2b6-96a7c8b931eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0f135af-df82-472a-9320-c362dc45d7a5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1230735-cd7c-4fb1-b050-df7fa7603510",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bb394f7-eb94-4ffd-a9d4-1c43aed6b260",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "286d7397-0f7c-4f1b-8471-fff8f1a63d50",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11572269-33db-4c9f-9467-fb1d893533be",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10704fe5-1086-4579-82a9-7cdf0998cd67",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerControl",
            "id": "5cf86ba4-fb68-4862-bc4a-69e923e1b7f1",
            "actions": [
                {
                    "name": "ChangePlayer",
                    "type": "Button",
                    "id": "972a7dc2-ee40-49f7-bee8-5e3d9721ee61",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b71bfe3b-b885-4927-9fd8-e252b190b395",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}